*Empty MediaWiki Message*

--- a/اسلام.mw
+++ b/اسلام.mw
@@ -1,6 +1,5 @@
-[[انځور:Mosque.Qibla.01.jpg|thumb|کيڼ|220px|مسلمانان د [[لمونځ|لمانځه]] د ادا کولو په وخت کې]]
-
-'''اسلام''' ([[عربي ژبه|عربي]]: {{Ar|الإسلام}}; ''{{ArabDIN|}}'' ({{Audio|ar-al_islam.ogg|غوږ شه!}}، "اطاعت" (د [[الله]] د رضا)) يو [[مونوتيزم|مونوتېسټېک]] (يانې د يوه څښتن تعالی ته د غاړې ايښودلو) ګروهه (عقيده) ده. پخپله د اسلام وی د سولې، امن، سلامتۍ، روغې جوړې رامنځته کول دي. دا دین [[ابراهيمي دين]]ونو له ډلې څخه دی، چې د نړۍ په کچه دویم ستر [[مذهب]] ګڼل کېږي. د اسلام د دين لارويانو ته '''[[مسلمانان]]''' وايي. مسلمانان پدې ګروهه دي چې [[الله]] د انسانانو د لارښوونې لپاره وخت پر وخت، خپل استازي ([[پيغمبر]]ان) رالېږلي، چې هریو خپله دنده د الهي اوامرو په رڼا کې په بشپړه توګه سرته رسولې.
+[[انځور:Mosque.Qibla.01.jpg|thumb|کيڼ|220px|مسلمانان د [[لمونځ|لمانځه]] کولو په حال]]
+'''اسلام''' ([[عربي ژبه|عربي]]: {{Ar|الإسلام}}; ''{{ArabDIN|}}'' ({{Audio|ar-al_islam.ogg|غوږ شه!}}، "اطاعت" (د [[الله]] د رضا)) يو [[مونوتيزم|مونوتېسټېک]] (د يوه څښتن مننونکي) ګروهې (عقيده) لرونکې دین دی. پخپله د اسلام وی د سولې، امن، سلامتۍ، روغې جوړې رامنځته کول دي. دا دین له درېیو [[ابراهيمي دين]]ونو  (یهوديت، عیسویت، اسلام) له ډلې څخه دی، چې د نړۍ په کچه دویم ستر [[مذهب]] ګڼل کېږي. د اسلام د دين لارويانو ته '''[[مسلمانان]]''' وايي. مسلمانان پدې ګروهه دي چې [[الله]] د انسانانو د لارښوونې لپاره وخت پر وخت، خپل استازي ([[پيغمبر]]ان) رالېږلي، چې هریو خپله دنده د الهي اوامرو په رڼا کې په بشپړه توګه سرته رسولې.
 د الهي استازو (پیغمرانو) وروستې استازې [[محمد]] صلی الله علیه وسلم دی.
 
 ''اسلام'' "تسليمۍ او غاړه اېښودنې ټه وایي", يا په بله وينا ځان د الله تعالی رضا ته تسليمول. د اسلام د دين لاروي ته [[مسلمان]] ويل کېږي، مانا دا چې "هغه څوک چې ځان يې الله تعالی ته سپارلی او د هغه د احکامو اطاعت کوي، مسلمان ګڼل کېږي".<ref name="EoI-Islam">{{cite encyclopedia | title=Islam | encyclopedia=Encyclopaedia of Islam Online | author=L. Gardet | coauthors=J. Jomier | accessdate=2007-05-02}}</ref><ref name="Lanes Lexicon">{{cite web|url=http://www.studyquran.org/LaneLexicon/Volume4/00000137.pdf|title=Lane's lexicon |accessdate=2007-07-03}}</ref> په ټوله نړۍ کې د 1.1&nbsp;بيليون او 1.8&nbsp;بيليون ترمېنځ وګړي د اسلام د دين لارويان دي، چې په همدې توګه وروسته د عيسويت نه اسلام د نړۍ دویم ستر دين ګڼل کېږي.<ref>{{cite web |url=http://www.adherents.com/Religions_By_Adherents.html#Islam |title=Major Religions of the World—Ranked by Number of Adherents |accessdate=2007-07-03 |format=HTML |work= }}</ref>
