*Empty MediaWiki Message*

--- a/عزیز_حدیث.mw
+++ b/عزیز_حدیث.mw
@@ -17,4 +17,4 @@
 
 له عزيزحديث سره اړوندکوم ځانګړی انفرادي تصنيف نه شته،ښکاره ده چي يادشوی مخصوص صفت بالکل لږاو نــــادردی اوپه داډول تصنيف کي کومه دپام وړګټه هم نه وي .
 
-[[category:په عربي ژبه د اسلامي وييونو لړليک]]
+[[category:د اسلامي وييونو وييپانګه]]
