--- a/عزیز_حدیث.mw
+++ b/عزیز_حدیث.mw
@@ -1,9 +1,10 @@
-عزیز حدیث يعني دضَرَبَ باب اوصفت مشبه صيغه ده . چي دلږاونادرپه معنی دی . 
-که دادفتح له باب عزّيعزّ دعين په زور(فتح) سره وويل شي نوبيادقوي اوسخت په معنی دی نوداډول روايات ياخوله دې وجې په دې نوم يادشوي چي دهغوتعدادلږاونادردی،ياله دې وجې چي کله بل سندورسره يوځای شي نوپه هغه کي قوت پيدا کيږي . 
+'''عزیز حدیث''' يعني دضَرَبَ باب اوصفت مشبه صيغه ده. چي دلږاونادرپه معنی دی. که دادفتح له باب عزّيعزّ دعين په زور(فتح) سره وويل شي نوبيادقوي اوسخت په معنی دی نوداډول روايات ياخوله دې وجې په دې نوم يادشوي چي دهغوتعدادلږاونادردی،ياله دې وجې چي کله بل سندورسره يوځای شي نوپه هغه کي قوت پيدا کيږي. 
 
-**اصطلاحاً ــ هغه حديث دی چی دهغه راويان په ټولوطبقو کي تردؤکم نه وي . 
 
-***'''۲ ــ دتعريف وضاحت'''
+== اصطلاحاً ==
+هغه حديث دی چی دهغه راويان په ټولوطبقو کي تردؤکم نه وي. 
+
+۲ ــ دتعريف وضاحت'''
 
 يعني ددې روايت دسندپه ټولوطبقوکي دراويانوشمېرتر دؤکم نه وي،خوکه په کومه طبقه کي تردې زيات شي يعني درې ياډېر،نوڅه پروانه لري .مګراړينه داده چي داتعدادبه په هيڅ طبقه کي تردؤکم نه وي،که څه هم يوه طبقه وي ، ځکه پرحديث ياسندحکم دهغه په طبقاتوکي دتعدادپه لحاظ سره کيږي اودحافظ ابن حجر رحمه الله په وينا همدغوره تعريف دی . (نخبة الفکرشرح ۲۱ ــ ۲۴) 
 
