*Empty MediaWiki Message*

--- a/عزیز_حدیث.mw
+++ b/عزیز_حدیث.mw
@@ -18,4 +18,8 @@
 
 له عزيزحديث سره اړوندکوم ځانګړی انفرادي تصنيف نه شته،ښکاره ده چي يادشوی مخصوص صفت بالکل لږاو نــــادردی اوپه داډول تصنيف کي کومه دپام وړګټه هم نه وي .
 
-[[category:د اسلام وييپانګه]]
+[[category:اسلام]]
+[[category:د اسلام وییپانګه]]
+[[category:حدیث]]
+[[category:سنت]]
+[[category:د حدیثو وییپانګه]]
