/* وجهة نظر الطائفة الإثنا عشرية الشيعية للخمس */

--- a/خمس.mw
+++ b/خمس.mw
@@ -2,14 +2,15 @@
 سنیان (اهل سنت او جماعت) لارویان پدې ګروهه دی، چې ددې مال ورکړه یواځې د [[غنیمت]] په مال کې روا ده، مګر شیعه ګان بیا وایي، چې دا ورکړه په ټولو اموالو کې اړینه ده.
 
 
-==وجهة نظر الطائفة الإثنا عشرية الشيعية للخمس ==
-الخمس عند الطائفة [[إثنا عشرية|الإثنا عشرية]] الخمس يقسم على ستة أسهم كالتالي : <ref>مجمع البيان في تفسير القرآن للطبرسي ج 4 ص ، 543</ref>
-*سهم لله ، وهذا السهم يذهب [[إمامة|للإمام]] القائم مقام الرسول.
-*سهم للرسول ، وهذا السهم يذهب للإمام القائم مقام الرسول.
-*سهم ذي القربى ، وهذا السهم يذهب للإمام القائم مقام الرسول.
-*سهم لليتامى ،  وهذا السهم يذهب ليتامى [[آل البيت|آل محمد]].
-*سهم للمساكين ،  وهذا السهم يذهب لمساكين آل محمد.
-*سهم لأبناء السبيل ،  وهذا السهم يذهب لأبناء سبيل آل محمد.
+==د شیعه ګانو نظر د خمس په اړه ==
+د [[اثنا عشری|دولس اماي]] شیعه ګنو په وړاندز خمس په شپږ برخو وېشل لاندینیو برخو وېشل کېږي: <ref>مجمع البيان في تفسير القرآن، لیکوال طبرسي ج 4 ص ، 543</ref>
+
+*د څښتن تعالی برخه، او دا برخه [[إمامة|امام]] (د رسول ځایناستي) ته ځي.
+*د رسول برخه،او دا برخه هم د رسول ځایناستي ته ورځي.
+*د ذي القربى برخه، او دا برخه هم د رسول ځایناستي ته ورځي.
+* د یتیمانو برخه، او دا برخه یتیمانو [[آل بيت|آل محمد]] ته ورځي.
+*سهم للمساكين ،  او دا برخه د آل محمد مسکینانو ته ورځي.
+*سهم لأبناء السبيل ،  او دا برخه هم د آل محمد آل سبيل (مساپرو) ته ورځي.
 
 <br>
 <br>
