/* وجهة طائفة أهل السنة والجماعة للخمس */

--- a/خمس.mw
+++ b/خمس.mw
@@ -15,7 +15,7 @@
 <br>
 <br>
 
-==وجهة طائفة أهل السنة والجماعة للخمس ==
+==خمس د اهل سنتو له نظره ==
 <br>
 <br>
 ===الخمس من أين يأخذ وكيف يتم تقسيمه===
