/* الخمس من أين يأخذ وكيف يتم تقسيمه */

--- a/خمس.mw
+++ b/خمس.mw
@@ -19,13 +19,14 @@
 <br>
 <br>
 ===الخمس من أين يأخذ وكيف يتم تقسيمه===
-**الخمس تم ذكره في كتاب الله تبارك وتعالى مرتين ، مع ملاحظة أن الزكاة تختلف عن الخمس ، و هناك آيات كثيرة في القرآن الكريم صريحة ورد فيها الأمر بدفع الزكاة. 
-**آية الخمس الأولى في سورة الأنفال وهي تتكلم عن معركة بدر ذكر [[القرآن]] (وَاعْلَمُواْ أَنَّمَا غَنِمْتُم مِّن شَيْءٍ فَأَنَّ لِلّهِ خُمُسَهُ وَلِلرَّسُولِ وَلِذِي الْقُرْبَى وَالْيَتَامَى وَالْمَسَاكِينِ وَابْنِ السَّبِيلِ) <ref>آية الخمس الأولى في سورة الأنفال</ref>.
-** يقول الله (مَّا أَفَاء اللَّهُ عَلَى رَسُولِهِ مِنْ أَهْلِ الْقُرَى فَلِلَّهِ وَلِلرَّسُولِ وَلِذِي الْقُرْبَى وَالْيَتَامَى وَالْمَسَاكِينِ وَابْنِ السَّبِيلِ كَيْ لَا يَكُونَ دُولَةً بَيْنَ الْأَغْنِيَاء مِنكُمْ)<ref>آية الخمس الثانية في سورة الحشر</ref>.
-**فالأيتان في الجهاد.
-**أربعة أخماسها للغانمين، والخمس لغيرهم بدليل قول [[القرآن]]‏:‏ ‏{‏واعلموا أنما غنمتم من شيء فأن لله خمسه‏}‏ فأضاف الغنيمة إليهم وجعل الخمس لغيرهم <ref> المغني-باب قسمة الفيء والغنيمة والصدقة</ref>. 
-**وأصل تقسيم مال الجهاد هكذا:
-***يقسم المال إلى خمسة أخماس.
+**د خمس یادښت دوه ځلې په قرآن کریم کې شوې، او د زکات مسله بیا له دې څخه بېله ده، او په قرآن کې بې شمېره آیاتونه دي، چې د زکات په ورکړه دلالت کوي.
+ 
+**د لومړي خمس په اړه سورت انفال کې د بدر د معرکې یادونه داسې راځي: (وَاعْلَمُواْ أَنَّمَا غَنِمْتُم مِّن شَيْءٍ فَأَنَّ لِلّهِ خُمُسَهُ وَلِلرَّسُولِ وَلِذِي الْقُرْبَى وَالْيَتَامَى وَالْمَسَاكِينِ وَابْنِ السَّبِيلِ) <ref>په سورت انفال کې د خمس آیت</ref>.
+** څښتن تعالی فرمایی: (مَّا أَفَاء اللَّهُ عَلَى رَسُولِهِ مِنْ أَهْلِ الْقُرَى فَلِلَّهِ وَلِلرَّسُولِ وَلِذِي الْقُرْبَى وَالْيَتَامَى وَالْمَسَاكِينِ وَابْنِ السَّبِيلِ كَيْ لَا يَكُونَ دُولَةً بَيْنَ الْأَغْنِيَاء مِنكُمْ)<ref> د دویم خمس آیت د حشر په سورت کې</ref>.
+**نو دا دوه ایاتونه د جهاد او غنیمت په اړه دی.
+** څلور برخې د غنیمت ترلاسه کوونکو لپاره دي، او پینځمه یې د څښتن تعالی لپاره ده، او هغه د[[قرآن]] کریم پدې دلیل‏:‏ ‏{‏واعلموا أنما غنمتم من شيء فأن لله خمسه‏}‏ نو د غنیمت اضافت یې هغوی (مجاهدینو) ته وکړ، او پینځمه برخه یې ځانته <ref> المغني- د فﺉ، غنیمت او صدقې د مال څپرکۍ</ref>. 
+**او د جهاد د مال اصل وېشنه پدې توګه ده:
+***مال په پینځه برخو وېشل کېږي.
 ***ويعطى الذين شاركوا في القتال أربعة أخماس (أي ثمانين بالمئه من مال الجهاد)، لأنهم هم الذين باشروا القتال.
 ***والخمس الخامس (وهو عشرين بالمئه من مال الجهاد) يقسم إلى خمسة أخماس مرة أخرى  وهي التي ذكرت في الأيتين السابقتين:
 ****خمس لله وللرسول (أي أربعة بالمئه من مال الجهاد) و بعد وفاة النبي ص لولي أمر المسلمين يصرفه في مصالح المسلمين.
