/* الخمس من أين يأخذ وكيف يتم تقسيمه */

--- a/خمس.mw
+++ b/خمس.mw
@@ -27,22 +27,21 @@
 ** څلور برخې د غنیمت ترلاسه کوونکو لپاره دي، او پینځمه یې د څښتن تعالی لپاره ده، او هغه د[[قرآن]] کریم پدې دلیل‏:‏ ‏{‏واعلموا أنما غنمتم من شيء فأن لله خمسه‏}‏ نو د غنیمت اضافت یې هغوی (مجاهدینو) ته وکړ، او پینځمه برخه یې ځانته <ref> المغني- د فﺉ، غنیمت او صدقې د مال څپرکۍ</ref>. 
 **او د جهاد د مال اصل وېشنه پدې توګه ده:
 ***مال په پینځه برخو وېشل کېږي.
-***ويعطى الذين شاركوا في القتال أربعة أخماس (أي ثمانين بالمئه من مال الجهاد)، لأنهم هم الذين باشروا القتال.
-***والخمس الخامس (وهو عشرين بالمئه من مال الجهاد) يقسم إلى خمسة أخماس مرة أخرى  وهي التي ذكرت في الأيتين السابقتين:
-****خمس لله وللرسول (أي أربعة بالمئه من مال الجهاد) و بعد وفاة النبي ص لولي أمر المسلمين يصرفه في مصالح المسلمين.
-****خمس (أربعة بالمئة) لذوي القربى وهم قربى النبي ص عوضا عن الزكاة التي حرمت عليم.
-****خمس (أربعة بالمئة) لليتامى.
-****خمس (أربعة بالمئة) للمساكين.
-****خمس (أربعة بالمئة) لأبناء السبيل.
+***څلور برخې هغو کسانو (مجاهدینو) ته ورکول کېږي، چې په غزا کې یې ګډون کړې وي، (یانې د جهاد د مال ۸۰سلنه برخه)، ځکه چې د همدوي (مجاهدینو) له وجې دا مال لاس ته راغلې دی.
+*** او پینځمه (خمس) برخه (او دا مال د جهادي مال ټولټال ۲۰ سلنه برخه جوړوي) یوځل بیا په پینځه برخو وېشل کېږي، او دا هغه وېشنه ده، چې په پورته دوه آیتونو کې یې یادونه وشوه.
+****خمس لله وللرسول ( یانې د مال څلور پر سل) او د نبي صلی الله علیه وسلم له مړینې څخه وروسته دا مسﺉله د مسلمانانو په عامه چارو کې ولګول شوه.
+****خمس (څلور پر سل) د ذوي القربى (د نبي علیه السلام خپل خپلوان) برخه، ځکه چې دوي ته زکات ورکړه حراهه ده.
+****خمس (څلور پر سل) د یتیمانو لپاره.
+****خمس (څلور پر سل) د مسکینانو لپاره.
+****خمس (څلور پر سل) دأبناء السبيل (مساپرو) لپاره.
 
-*والخمس إنما يؤخذ من غنائم الجهاد لأن الله تبارك والله يقول {وأعلموا أَنَّمَا غَنِمْتُم } غنيمة في الجهاد ، غنائم الجهاد تؤخذ من الكفار وليس من المسلمين .
+*او خمس (پینځمه برخه) د غنیمت له مال څخه اخستل کېږي، ځکه چې څښتن تعالی فرمايي: {وأعلموا أَنَّمَا غَنِمْتُم } غنیمت په جهاد کې وی، غنایم له کفارو څخه اخستل کېږي، نه چې له مسلمانانو څخه.
 
-
-*'''مثال للتوضيح :'''
-**فلوا فرضنا أن الغنيمة 10 آلاف.
-**فتقسم هذه الغنيمة إلى خمسة أخماس (أي ألفين + ألفين + ألفين + ألفين + ألفين ).
-**ثم أربعة أخماس تعطى للمجاهدين للذين قاتلوا وشاركوا في المعركة ثمانية آلاف (ألفين + ألفين + ألفين + ألفين).
-**فيبقى ألفين ،  فيقسمان على خمسة أخماس :
+*'''د لا روښانتیا لپاره یو مثال:'''
+**فرض کوو، چې د غنیمت مال ۱۰ زره افغانۍ دی.
+**نو دا غنیمت (۱۰زره افغانۍ) به په پینځه مساوي برخو وېشل کېږي، یانې (دوه زره + دوه زره + دوه زره + دوه زره + دوه زره).
+**بیا له پینځو برخو څخه څلور برخې هغو مجاهدینو ته ورکول کېږ، چې په غزا کې یې ګډون کړې وي.
+**نو دوه زره پاتې شوې. دا بیا په پینځه برخو وېش کېږي:
 ***لله والرسول  لذوي القربى لليتامى للمساكين لأبن السبيل أربعمائة لكل سهم.
 ***أي ذوي القربى سوف يحصلون على أربعمائة ، أي خمس الخمس وهو يساوي ما نسبته أربعة بالمائة.
 
