--- a/خمس.mw
+++ b/خمس.mw
@@ -87,7 +87,8 @@
 **وقوله صلى الله عليه وسلم : "يا ايها الناس انه لا يحل لي مما افاء الله عليكم قدر هذه الا الخمس والخمس مردود عليكم" <ref>  سنن النسائي - كتاب قسم الفىء - حديث 4155  </ref> ، يؤيد ذلك فإن قوله لي أي أمره إلى ولهذا قال والخمس مردود عليكم وعلى هذا الأصل فما كان بيده من أموال بني النضير وفدك وخمس خيبر وغير ذلك هي كلها من مال الفىء الذي لم يكن يملكه فلا يورث عنه وإنما يورث عنه ما يملكه بل تلك الأموال يجب أن تصرف فيما يحبه الله ورسوله من الأعمال وكذلك قال أبو بكر الصديق .
 **وأما ما قد يظن أنه ملكه كمال أوصى له به مخيريق وسهمه من خيبر فهذا إما أن يقال حكمه حكم المال الأول وإما أن يقال هو ملكه ولكن حكم الله في حقه أن يأخذ من المال خاجته وما زاد على ذلك يكون صدقة ولا يورث كما في الحديث الصحيح عن أبي هريرة  أن النبي صلى الله عليه وسلم قال : لا يقتسم ورثتي دينارا ولا درهما وما تركت بعد نفقة نسائي ومؤنة عاملي فهو صدقة <ref>عن أبي هريرة، أن رسول الله صلى الله عليه وسلم قال ‏"‏ لا يقتسم ورثتي دينارا، ما تركت بعد نفقة نسائي ومؤنة عاملي فهو صدقة ‏"‏‏.‏  صحيح البخاري-كتاب الفرائض-حديث6815 </ref> ، وفي الصحيحين عن أبي هريرة  عن النبي صلى الله عليه وسلم قال : لا نورث ما تركناه فهو صدقة <ref>  صحيح البخاري-كتاب المغازي ، صحيح مسلم- كتاب الجهاد والسير   </ref> أخرجه البخاري عن جماعة منهم أبو هريرة  ورواه مسلم عنه وعن غيره.
 
-==مصادر==
+==سرچینې==
+
 {{ثبت المراجع}}
 
 [[تصنيف:مصطلحات إسلامية]]
