--- a/خمس.mw
+++ b/خمس.mw
@@ -91,8 +91,12 @@
 
 {{ثبت المراجع}}
 
-[[تصنيف:مصطلحات إسلامية]]
-[[تصنيف:مواضيع خلافية متعلقة بالإسلام]]
+[[category:د اسلام وییپانګه]]
+[[category:حدیث]]
+[[category:قرآن]]
+[[category:فقه]]
+[[category:شریعت]]
+
 
 [[da:Khums]]
 [[en:Khums]]
