/* نبي صلی الله علیه وسلم باندې د ثناء ویلو الفاظ */

--- a/صلی_الله_عليه_وسلم.mw
+++ b/صلی_الله_عليه_وسلم.mw
@@ -10,7 +10,7 @@
 
 {|  cellspacing="0" cellpadding="3" border 
 |-style="text-align: center; font-size: larger; margin-center: inherit" bgcolor="AliceBlue"
-| '''لفظ''' || ''''''المصادر'''
+| '''لفظ''' || ''''''سرچینې'''
 |- style="vertical-align: top;"
 | align="right"| <big>اللَّهُمَّ صَلِّ عَلَى مُحَمَّدٍ وَآلِ مُحَمَّدٍ، كَمَا صَلَّيْتَ عَلَى آلِ إِبْرَاهِيمَ، إِنَّكَ حَمِيدٌ مَجِيدٌ، اللَّهُمَّ بَارِكْ عَلَى مُحَمَّدٍ وَآلِ مُحَمَّدٍ، كَمَا بَارَكْتَ عَلَى آلِ إِبْرَاهِيمَ، إِنَّكَ حَمِيدٌ مَجِيدٌ </big> ||[النسائي/ 1289، صحيح]
 |-
