--- a/اردن.mw
+++ b/اردن.mw
@@ -58,7 +58,7 @@ footnotes = |
 == Governorates ==
 
 *[[Ajlun Governorate|Ajlun]]
-*[[Amman Governorate|Amman]]
+*[[Amman Governorate|عمان]]
 *[[Aqaba Governorate|Aqaba]]
 *[[Balqa]]
 *[[Irbid Governorate|Irbid]]
