--- a/شهاب_الدين_سهروردي.mw
+++ b/شهاب_الدين_سهروردي.mw
@@ -13,8 +13,9 @@
 
 == زندگی ==
 
-شیخ شهاب الدین سهروردی در [[سهرورد]]  [[خدابنده]] [[زنجان]] زاده شد. وی [[حکمت]] و [[اصول فقه]] را نزد مجدالدین جیلی استاد [[فخر رازی]] در [[مراغه]] آموخت و در علوم حکمی و فلسفی سرآمد شد و بقوت ذکا، وحدت ذهن و نیک اندیشی بر بسیاری از علوم اطلاع یافت.<ref>فرهنگ فارسی دکتر معین</ref>
+شیخ شهاب الدین سهروردی د [[سهرورد]]  په [[زنجان]] سیمه کې زېږېدلې. د فلسفې، اصول فقه زده کړې یې له مجدالدین جیلی، چې د فخر رازی]] و، په [[مراغه]] کې پیل کړې، او په فلسفي او حکمت کې خپل اوج ته ورسېد، او د ډېرې زیرکۍ له وجې یې په ډېرو اسلامي علومو لاسبرې شو.<ref>فرهنگ فارسی، ډاکټر معین</ref>
 
+سهروردي له رسمي زده کړو څخه وروسته د پارس داخل سفرونه پیل کړل، او ډېری د تصوف شیخان یې ولیدأ.
 سهروردی پس از پایان تحصیلات رسمی، به سفر در داخل ایران پرداخت، و از بسیاری از مشایخ [[تصوف]] دیدن کرد و بسیار مجذوب آنان شد. به واقع، در همین دوره بود که به راه تصوف افتاد و دوره‌های درازی را به [[اعتکاف]] و عبادت و تامل گذراند.
 
 سفرهای وی رفته رفته گسترده تر شد، و به [[آناتولی]] و [[شامات]] نیز رسید و در این سفر، مناظر شام «سوریه» او را بسیار مجذوب خود نمود.
