--- a/شهاب_الدين_سهروردي.mw
+++ b/شهاب_الدين_سهروردي.mw
@@ -11,7 +11,7 @@
 
 '''شهاب الدین یحیی ابن حبش بن امیرک ابوالفتوح سهروردی'''، په شهاب‌الدین او شیخ اشراق او شیخ مقتول باندې ستایل شوې (ملقب)، (۵۴۹ - ۵۷۸ ه.س.) یا ( ۱۱۵۴ - ۱۱۹۱ ز.) د اسلامي نړۍ له نوموتو فیلسوفانو څخه دی.
 
-== زندگی ==
+== ژوند==
 
 شیخ شهاب الدین سهروردی د [[سهرورد]]  په [[زنجان]] سیمه کې زېږېدلې. د فلسفې، اصول فقه زده کړې یې له مجدالدین جیلی، چې د فخر رازی]] و، په [[مراغه]] کې پیل کړې، او په فلسفي او حکمت کې خپل اوج ته ورسېد، او د ډېرې زیرکۍ له وجې یې په ډېرو اسلامي علومو لاسبرې شو.<ref>فرهنگ فارسی، ډاکټر معین</ref>
 
