--- a/شهاب_الدين_سهروردي.mw
+++ b/شهاب_الدين_سهروردي.mw
@@ -44,19 +44,18 @@
 
 سهروردی [[وجودشناسی]]<ref>Ontology</ref> خود را «نورالانوار» نام داده است. همان حقیقت الهی که درجه روشنی آن چشم را کور می کند. نور را نمی توان با کمک چیز دیگر و نسبت به آن تعریف کرد، زیرا تمام اشیا با نور آشکار می شوند و طبعا باید با نور تعریف شوند. «نورالانوار» یا «نور مطلق» همان وجود مطلق است و تمام موجودات، وجود خود را از این منبع کسب کرده اند و جهان هستی چیزی جز مراتب و درجات گوناگون روشنایی و تاریکی نیست. به همین دلیل سلسله مراتب موجودات بستگی به درجه نزدیکی آن ها با «نورالانوار» دارد، یعنی به میزان درجه «اشراق» و نوری که از نورالانوار به آن ها می رسد.<ref>[[محمدرضا فشاهی]]، [http://www.caravan.ir/BookDetails.aspx?bookId=127&categoryId=4 ''ارسطوی بغداد، از عقل یونانی به وحی قرآنی''،] [[انتشارات کاروان]]، ۱۳۸۰، صص ۳۴-۳۵</ref>
 
-== آثار ==
-
-فهرست کامل آثار فارسی و عربی شهاب الدین یحیی سهروردی با استفاده از فهرست شهرزوری و مقایسه آن با فهرست (ریتر) در دائرةالمعارف اسلامیه بشرح زیر آمده‌است:
+== آثار او لیکنې==
+د سهروردي د پاړسي او عربی ژبو کې د اثارو لړلیک په لاندې توګه دی:
 
 ۱- المشارع و المطارحات، در منطق، طبیعیات، الهیات.
 
 ۲- التلویحات.
 
-۳- حکمةالاشراق، در دو بخش.  بخش نخست، در سه مقاله در منطق، بخش دوم در الهیات در پنج مقاله. (این کتاب مهم‌ترین تألیف سهروردی میباشد و مذهب و مسلک فلسفی او را بخوبی روشن مینماید).
+۳- حکمةالاشراق، په دوه برخو کې، لومړۍ برخه په: درې مقالې یې د منطق په اړه، دویمه برخه په الهیاتو کې ده، چې پینځه مقالې دی.  (دا کتاب د سهروردي له مهمو کتابونو څخه ګڼل کېږي، چې دده لار او فلسفی مسلک په ښه توګه روښانه کوي).
 
-۴- اللمحات، کتاب مختصر و کوچکی در سه فن از حکمت، یعنی: طبیعیات، الهیات و منطق.
+۴- اللمحات، یو کوچنې او لنډ کتاب دی، چې د فلسفې په درې فنونو څخه بحث کوي: لکه، ‌طبیعیات، الهیات او منطق.
 
-۵- الالواح المعادیه، در دانشهای حکمت و اصطلاحات فلسفه.
+۵- الالواح المعادیه، د حکمت د پوهې او  فلسفي اصطلاحاتو په اړه.
 
 ۶- الهیاکل النوریه، یا هیاکل النور. این کتاب مشتمل بر آراء و نظریه‌های فلسفی میباشد، بر مسلک و ذوق اشراقی. سهروردی نخست آن را به زبان عربی نگاشته و سپس خود آن را به پارسی ترجمه کرده‌است.
 
