--- a/شهاب_الدين_سهروردي.mw
+++ b/شهاب_الدين_سهروردي.mw
@@ -141,11 +141,10 @@
 
 ابداً تحن الیکم الارواح                              و وصالکم ریحانها والروح
 
-== شاعر ==
+== شعر و شاعري ==
 
-شهرزوری نوشته‌است که شیخ شهاب الدین یحیی سهروردی بر سبیل تفنن به فارسی نیز شعر می‌گفته‌است و این رباعی در تذکره‌ها از او مشهور است:
+شهرزوری لیکي چې شیخ شهاب الدین یحیی سهروردي د تفنن پر لار په پاړسي ژبه هم شعر وایه، چې دا څلوریزه یې د بېلګې په توګه یادولې شو:
 
-{{شعر}}
 {{ب|هان تان سر رشته خرد گم نکنی| خود را ز برای نیک و بد گم نکنی}}
 {{ب|رهرو توئی و راه توئی منزل تو|هشدار که راه خود به خود گم نکنی}}
 {{پایان شعر}}
