/* جستار های وابسته */

--- a/شهاب_الدين_سهروردي.mw
+++ b/شهاب_الدين_سهروردي.mw
@@ -149,12 +149,12 @@
 {{ب|رهرو توئی و راه توئی منزل تو|هشدار که راه خود به خود گم نکنی}}
 {{پایان شعر}}
 
-== جستار های وابسته ==
+== تړلې موضوعګانې ==
 
 *[[حکمت اشراق]]
 *[[حکمة‌الاشراق]]
 
-{{فیلسوفان مسلمان|سهروردی، شهاب‌الدین}}
+{{مسلمان فیلسوفانن|سهروردي، شهاب‌الدین}}
 
 ==پانویس ها==
 
