--- a/شهاب_الدين_سهروردي.mw
+++ b/شهاب_الدين_سهروردي.mw
@@ -161,12 +161,12 @@
 <references/>
 {{reflist}}
 
-== منابع ==
+== سرچینې==
 
 {{حقوق معنوی|[[محمد معین]]|[[۲۱ تیر]] [[۱۳۵۰]]}}
 *۱ فرهنگ فارسی دکتر معین
 *۲[http://daneshnameh.roshd.ir/mavara/mavara-index.php?page=%d8%b3%d9%87%d8%b1%d9%88%d8%b1%d8%af%db%8c&SSOReturnPage=Check&Rand=0 دانشنامه رشد]
-*۳ کتاب ملاصدرا تالیف هانری کربن ترجمه ذبیح الله منصوری
+*۳ د ملاصدرا کتاب، لیکوال: هنري کوربنو ژباړه: ذبیح الله منصوری
 {{چپ‌چین}}      
 * Nasr, Seyyed Hossein, and Leaman, Oliver (eds), ''History of Islamic Philosophy'', Ansarian Publications - Qum, Iran, 1993. ISBN: 964-438-307-9    
 {{پایان چپ‌چین}} 
