robot  Modifying: [[no:Abdul Kalam]]

--- a/عبدالکلام.mw
+++ b/عبدالکلام.mw
@@ -188,7 +188,7 @@ A cathlab is essential to carry out life-saving cardiac intervention procedures.
 [[ml:എ.പി.ജെ. അബ്ദുല്‍ കലാം]]
 [[mr:ए.पी.जे. अब्दुल कलाम]]
 [[nl:Abdul Kalam]]
-[[no:Avul Pakir Jainulabdeen Abdul Kalam]]
+[[no:Abdul Kalam]]
 [[pl:A.P.J. Abdul Kalam]]
 [[ru:Калам, Абдул]]
 [[sa:अब्दुल कलाम]]
