robot  Adding: [[fa:احمد ابن حنبل]]

--- a/امام_احمد_بن_حنبل.mw
+++ b/امام_احمد_بن_حنبل.mw
@@ -21,6 +21,7 @@
 [[de:Ahmad ibn Hanbal]]
 [[en:Ahmad ibn Hanbal]]
 [[es:Ahmad bin Hanbal]]
+[[fa:احمد ابن حنبل]]
 [[fr:Ahmad Ibn Hanbal]]
 [[id:Imam Ahmad]]
 [[it:Ahmad ibn Hanbal]]
