--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -69,9 +69,9 @@
 
 
 
-== رحلاته العلمية == 
+== علمي سفرونه == 
 
-رحل الشهرستاني في طلب العلم وهو في سن الخامسة عشرة إلى بلاد كثيرة منها : مدن [[خراسان]] و[[خوارزم]] و[[مكة المكرمة]] و[[بغداد]] .
+علامه شهرستاني د پوهې او زده کړې ترلاسه کولو لپاره د اسلامي نړۍ سترو ښارونو لکه د [[افغانستان]] ځینو ښارونو، مکه مکرمه]]، [[بغداد]] او داسې نورو ته سفرونه کړي او د هغه پیر له کره پوهانو څخه یې مروجه زده کړې ترلاسه کړې.
 
 == هغه پوهان چې علامه ورڅخه زده كړې وكړې ==
 
