--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -80,7 +80,7 @@
 
 
 ==سياست==
-د ننګرهار ولايت اوسينی والي [[ګل اغا شېرزی]] دی.
+د ننګرهار ولايت اوسنی والي [[ګل اغا شېرزی]] دی.
 
 ==باندنۍ تړنې==
 *[http://www.aims.org.af/maps/provincial/nangarhar.pdf د ننګرهار ولايت نخشه] (PDF)
