--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -86,21 +86,22 @@
 
 
 
-== مؤلفاته == 
+== اثار او لیکنې== 
 
-كان الشهرستاني مشهوراً بالبراعة في التأليف وحسن التصنيف ، وقد ألف في فنون العلم المختلفة التفسير والفقه وعلم الكلام والفلسفة و[[تاريخ]] [[فرقة|الفرق]] و[[دين|الأديان]] ، وقد بلغ عدد مؤلفاته ما يزيد على عشرين مؤلفاً ، ومن هذه المؤلفات :
+علامه شهرستاني په ښکلو او علمي لیکنو کې ماهر پېژندل کېده، ده په مختلفو علومو په فنونو کې لیکنې کړي، چې په لاندې ډول به یې یادونه وکړي:
+* تفسیر، فقه، علم کلام، فلسفه، تاریخ، فِرَق او ادیان. پدې علومو کې یې څه باندې ۲۰ پوهنیې او څېړنیز اثار پرېښي. 
 
-- [[الملل والنحل]] : وهو أشهر كتبه . 
+- [[الملل والنحل]] : دا کتاب یې په فلسفي او مذهبي ډلو ټپلو (فرقو) باندې لیکلې، چې تر نن ورځې پورې یې خپل ارزښت په هماغه ډول ساتلې، او د یوې سرچینې په توګه کارول کېږي.
 
-- [[نهاية الإقدام في علم الكلام]] : في النهي عن الاشتغال بعلم الكلام والفلسفة . 
+- [[نهاية الإقدام في علم الكلام]] : دا کتاب یې د فلسفې او علم کلام د زده کړې په منع کې لیکلې دی. 
 
-- مصارعة [[فيلسوف|الفلاسفة]] : في الرد على الفلاسفة .
+- مصارعة [[فيلسوف|الفلاسفة]] : د مصارعې کتاب یې هم په فیلسوفنو باندې نقد او رد دی.
 
-- مجلس في الخلق والأمر : [[لغة فارسية|باللغة الفارسية]] . 
+- مجلس في الخلق والأمر : په پاړسي ژبه. 
 
-- بحث في الجوهر الفرد : وهو بحث فلسفي بحت . 
+- بحث في الجوهر الفرد : دا مقاله یې د فلسفي موضوعاتو (جوهر او فرد) پورې اړوند ده. 
 
-- شبهات أرسطو وبرقلس وابن سينا : كتاب في الرد على الفلاسفة .
+- شبهات أرسطو و برقلس وابن سينا : دا کتاب یې هم د فلاسفه و په در کې لیکلې.
 
 == مذهبه العقائدي == 
 
