--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -103,11 +103,13 @@
 
 - شبهات أرسطو و برقلس وابن سينا : دا کتاب یې هم د فلاسفه و په در کې لیکلې.
 
-== مذهبه العقائدي == 
+== عقیدوي مذهب یې == 
+د علامه شهرستاي عقیدوي مذهب اشعري مذهب دی، لکه څرنګ چې دده له لیکنو څخه په روښانه ډول ښکاري، دې اشعري مذهب ته مایل سړی و. د الملل و النحل او [[نهایت الاقدام فی علم الکلام]] کتابونه د اشعري ګروهې په ننګه او د مخالفینو په ضد خپل دلایل او براهین وړاندز کوي. نو دا کتابونه پدې خبره ښه دلیل کېدای شي، چې علامه شهرستاني یو اشعري عالم و.
+بله خبره چې باید په پام کې ونیول شي، هغه دده د ښوونکو ده، چې ټول همدې یوې ډلې پورې تړلي کسان ول. 
 
-مذهب الشهرستاني العقائدي هو مذهب الأشاعرة ، وقد صرح بذلك هو بنفسه في بعض كتبه ، وهذا ما يكاد يجمع [[مترجم|المترجمون]] له عليه ، بل إن أشهر كتبه ( [[الملل والنحل]] ) يدل دلالةً واضحةً على ذلك ، وشيوخه هم من [[أشاعرة|الأشاعرة]] ، بل وكتابه ( [[نهاية الإقدام في علم الكلام]] ) ينصر المذهب الأشعري بأدلته وحججه ويناقش الآراء المخالفة له ويرد عليها .
 
-=== بعض آرائه العقدية ===
+
+=== ځینې عقیدوي رای یې===
 
 [[رأي|أراء]] الشهرستاني [[عقيدة|العقائدية]] هي موافقة تماماً [[مذهب|للمذهب]] الأشعري . 
 
