*Empty MediaWiki Message*

--- a/لېو_نيكولايوويچ_تولستوى.mw
+++ b/لېو_نيكولايوويچ_تولستوى.mw
@@ -13,7 +13,8 @@
 
 [[وېشنيزه:روسيه]]
 
-[[am:ሊዮ ቶልስቶይ]]
+[[[am:ሊዮ ቶልስቶይ]
+[[arz: تولستوي]]
 [[ar:ليو تولستوي]]
 [[az:Lev Tolstoy]]
 [[bat-smg:Levs Tuolstuos]]
