--- a/ملا_صدرا.mw
+++ b/ملا_صدرا.mw
@@ -271,7 +271,7 @@
 |-
 | [[Image:Ibn rushd1.jpg|90px|]]
 |-
-|[[يعقوب كندي]] | [[ابن سینا بلخي]] | [[ابن عربي]] | [[ابي نصر الفارابي]] | [[غزالي]] | [[ابن خلدون]] | [[ابن رشد]] | [[ابن طفیل]] | [[علامه اقبال]] | [[سيد جمال الدين افغاني]]| [[حمزه شينواری|امير حمزه شينوارې]] | [[امام فخر الدين رازي]] | [[رابعه بلخي]] | [[غني خان]] | [[ابو الاعلى مودودي]] | [[شاه ولي الله]] | {[[سېد محمد طباطبايي]] | [[عمر خيام]] |[[ابن مسكوی]] | [[سېد حسن نصر]] | [[جلال الدین رومي]] |[[شقیق بلخي]] | [[شېخ الاشراق سهروردي]] | [[محمد قاسم نانوتوي]] | [[مولانا منصور انصاري]] | [[ملا صدرا]]
+|[[يعقوب الكندي]] | [[ابن سینا بلخي]] | [[ابن عربي]] | [[ابي نصر الفارابي]] | [[غزالي]] | [[ابن خلدون]] | [[ابن رشد]] | [[ابن طفیل]] | [[علامه اقبال]] | [[سيد جمال الدين افغاني]]| [[حمزه شينواری|امير حمزه شينوارې]] | [[امام فخر الدين رازي]] | [[رابعه بلخي]] | [[غني خان]] | [[ابو الاعلى مودودي]] | [[شاه ولي الله]] | {[[سېد محمد طباطبايي]] | [[عمر خيام]] |[[ابن مسكوی]] | [[سېد حسن نصر]] | [[جلال الدین رومي]] |[[شقیق بلخي]] | [[شېخ الاشراق سهروردي]] | [[محمد قاسم نانوتوي]] | [[مولانا منصور انصاري]] | [[ملا صدرا]]
 |-
 |}
 
