/* وحدة الوجود او د طبعیاتو ماهران */

--- a/وحدة_الوجود.mw
+++ b/وحدة_الوجود.mw
@@ -5,6 +5,11 @@
 ددې اریانوونکي نظم و ضبط په لیدو سره دې پایلې ته ورسېد، چې د اشیاو انفرادي او ذاتي وجود استحکام تصور له یو وهم څخه نور څه نه د، او دا موجودات یواځې د یوې لمحې رڼا ده، .... همدا د یووالي (وحدت) کشش دی، چې بالاخره دا موجودات لومړنۍ سرچینې، د وجود لامل یا د مادی لومړني صورت اړخ ته راکاږل، او ددې کوښښ یواځې مادي وجود پیدا کولو پورې محدود نه دی، بلکه دا د تصوف په علومو کې (چې لارې ګودرې یې ډېرې ستونزمنې او صبرغوښتونکي دی) لاس و خپې وهل پیل کړل، او له خپل کوښښ څخه دې پایلې ته ورسېد، چې دده جزیي او متفرق مالومات د یو [[وحدت]] او [[کلیت]] غوښتنه کوي.
 
 ==وحدة الوجود او د طبعیاتو ماهران==
+
+د طبیعیاتو څېړونکي وایي، چې د اجسامو او اشیاوو بډوالې (اختلاف) یواځې ظاهري دی، او په حقیقت کې هغه د ذات او طبیعت لمخې یوډول دي، او د عناصرو بډوالی د اجزاو د لږوالي او ډېروالي له وجې دی، او هېڅ یو جز (الکترون) له خپل ځای څخه نشي لرې کولای.
+
+ددوي په خیال هېڅ څیز د عالم له یووالي (وحدت) څخه بهر نه وځي، هر کار چې کېږي، د هغې وجه (علت) له مخکې څخه شتون لري. او په خپل وخت سره په راتلونکیو پېښو باندې اغیزمن ثابتېږي. د کوم څیز ورکېدل (معدوم کېدل) په اصل کې د هغې د اجزاو شننه (تیت و پرک کېدنه) ده، چې په نوي ترتیب او نوي شکل سره مخې ته راځي. خوځښت (حرکت) له تودوخې (حرارت) څخه منځته راحي تودوخه په خوځښت بدلېږي، ان تردې چې روښنایي او غږونه هم د خوځښت زېږنده ده.
+
 ==د فیلسوفانو او ساپوهانو نظره==
 ===وحدت===
 ===هویت===
