--- a/وحدة_الوجود.mw
+++ b/وحدة_الوجود.mw
@@ -10,9 +10,13 @@
 
 ددوي په خیال هېڅ څیز د عالم له یووالي (وحدت) څخه بهر نه وځي، هر کار چې کېږي، د هغې وجه (علت) له مخکې څخه شتون لري. او په خپل وخت سره په راتلونکیو پېښو باندې اغیزمن ثابتېږي. د کوم څیز ورکېدل (معدوم کېدل) په اصل کې د هغې د اجزاو شننه (تیت و پرک کېدنه) ده، چې په نوي ترتیب او نوي شکل سره مخې ته راځي. خوځښت (حرکت) له تودوخې (حرارت) څخه منځته راحي تودوخه په خوځښت بدلېږي، ان تردې چې روښنایي او غږونه هم د خوځښت زېږنده ده.
 
+سپنسر وایي چې:
+((قوت هم د بدلون وړ دی، څرنګه چې برښنايي قوت څخه تودوخه او تودوخې څخه برېښیز (برقي) قوت دواړه روښنایي پیدا کوي، او خوځښت چې په اشیاو کې بدلون پیدا کوي خپله قوت او (توانايي) ده. او جسم هم له قوت څخه جوړېږي، نو په روښانه توګه ټول قوتونه د یو قوت تجلیات دي او د (یوه مطلق امر) پورې اړوند دي)).
+
 ==د فیلسوفانو او ساپوهانو نظره==
 ===وحدت===
 ===هویت===
+
 ==وحدت او وجود==
 ==وحدة الوجود د صوفیانو او عارفانو له نظره==
 ==و موجود یووالې یا هرڅه همهغه دی==
