/* د فیلسوفانو او ساپوهانو نظره */

--- a/وحدة_الوجود.mw
+++ b/وحدة_الوجود.mw
@@ -13,6 +13,9 @@
 سپنسر وایي چې:
 ((قوت هم د بدلون وړ دی، څرنګه چې برښنايي قوت څخه تودوخه او تودوخې څخه برېښیز (برقي) قوت دواړه روښنایي پیدا کوي، او خوځښت چې په اشیاو کې بدلون پیدا کوي خپله قوت او (توانايي) ده. او جسم هم له قوت څخه جوړېږي، نو په روښانه توګه ټول قوتونه د یو قوت تجلیات دي او د (یوه مطلق امر) پورې اړوند دي)).
 
+د نولسمې پېړۍ الماني فیلسوف هرمان لتسې وایي:
+((موږ د اشیاو ډېوالې یواځې په ظاهري سترګه ګورو، حال دا چې دا اشیا په یو بل د اغیزې کولو سره د ایجاد او تخلیق سبب کېږي، او لدې څخه دا پایله په لاس راځي، چې دا شیان په انفرادي ډول نشي قایمېداي. انفرادي ډول قایم شی په کوم بل انفرادي ډول قایم شي باندې نه اغیز اچولې شي، او نه له هغه څخه اغیزمن کېدای شي. ددې شیانو ترمنځ یوه ژوره اړیکه وي، یا په بله مانا چې د یوه وجود مختلف انځورونه دي، څرنګوالي یې دي، او دې ټولو هماغه یو مبدا وي)).
+
 ==د فیلسوفانو او ساپوهانو نظره==
 ===وحدت===
 ===هویت===
