/* د فیلسوفانو او ساپوهانو نظره */

--- a/وحدة_الوجود.mw
+++ b/وحدة_الوجود.mw
@@ -17,7 +17,11 @@
 ((موږ د اشیاو ډېوالې یواځې په ظاهري سترګه ګورو، حال دا چې دا اشیا په یو بل د اغیزې کولو سره د ایجاد او تخلیق سبب کېږي، او لدې څخه دا پایله په لاس راځي، چې دا شیان په انفرادي ډول نشي قایمېداي. انفرادي ډول قایم شی په کوم بل انفرادي ډول قایم شي باندې نه اغیز اچولې شي، او نه له هغه څخه اغیزمن کېدای شي. ددې شیانو ترمنځ یوه ژوره اړیکه وي، یا په بله مانا چې د یوه وجود مختلف انځورونه دي، څرنګوالي یې دي، او دې ټولو هماغه یو مبدا وي)).
 
 ==د فیلسوفانو او ساپوهانو نظره==
+د فیلسوفانو او ساپوهان پدې ګروهه دي، چې د انسان شخصیت په دوه ارکانو ولاړ دی، '''۱- یووالې''' (وحدت)، او '''۲- هویت''' 
+په لاندې توګه به دواړه لږ وڅېړو:
+
 ===وحدت===
+
 ===هویت===
 
 ==وحدت او وجود==
