--- a/وحدة_الوجود.mw
+++ b/وحدة_الوجود.mw
@@ -21,6 +21,9 @@
 په لاندې توګه به دواړه لږ وڅېړو:
 
 ===وحدت===
+دا خبره له مختلفو لارو څخه په زبات رسېدلې، چې د انسان باطني احوال په خپلمنځ کې یو ډول اړیکې او تلسل لری. انساني ژوند په اروايي او عقلي توګه له خپل تېر (ماضي) سره په بشپړ ډول تړلې دی. یانې انسان خپلې تېرې کیسې په یاد لري، او دا شعور لري، چې دا سوچ وکړي چې دې (انسان) په ماشومتوب کې څرنګه و، او خپل ګډوډ افکار او تصوراتو د راغونډولو او منظمولو وړتیا لري، او د تېر او راتلونکي حساب د راټولو یو واحد حکم په کار په کار اچوي، نو د احوالو او مقاماتو اړیکه او ژوره خپلوي ددې خبرې دلیل دی، چې هغه د خپلې مبدا او اصلیت کې له یو بل څخه نشي بېلېدای، او د یو وحدت په تړاو سره تړلي دي.
+
+دویم دلیل دا دی، چې هغه تضادات
 
 ===هویت===
 
