/* د غزالي شل مسئلې */

--- a/تهافت_الفلاسفه.mw
+++ b/تهافت_الفلاسفه.mw
@@ -39,10 +39,10 @@
 
 د هغو شلو (۲۰) مسئلو تشرېح كومو كې چې غزالي د فيلسوفانو تناقض ښكاره كړې دى:
 
-*1)	د عالم ازليت په اړه د فيلسوفانو مذهب
-*2)	د عالم ابديت (تلوالي) په اړه .......
-*3)	د دوي دا وينا، چې څښتن تعالى د عالم پينځوونكې دى او عالم د هغه پنځونه ه.
-*4)	د پنځوونكي په زباتونه كې د دوي پاتې راتلل.
+*1)	د عالم د ازليت.
+*2)	د عالم ابديت (تلوالی).
+*3)	د فلاسفه و دا وينا، چې څښتن تعالى د عالم پينځوونكې ندى.
+*4)	د پنځوونكي د شتون په زباتونه كې د دوي پاتې راتلل.
 *5)	د دوه څښتنانو په محال والي باندې د دليل راوړلو كې پاتې راتلل.
 *6)	د څښتن تعالى د صفاتو د نفې په اړه د لوى مذهب...
 *7)	د دوي دا وينا چې لومړى (څښتن تعالى) ذات په جنس او فصل نه ويشل كېږي.
@@ -50,15 +50,17 @@
 *9)	د لومړي په غېر جسماني زباتونه كې د دوي پاتې راتلل. 
 *10)	 د هريت عقيده او د پنځوونكي د وجود نفې د فيلسوفانو د مذهب لازمي جز دى.
 *11)	 ددې خبرې (امر) په زباتولو كې پاتې راتلل چې د عالم پنځوونكې د خپل ځان په اړه مالومات لري.
-*12)	د هغه دا قول چې لومړې (څښتن تعالى) ته د جزياتو په اړه مالومات شته.
-*13)	 د هغوي دا وينا چې اسمان يوه خوځنده بې ارادې حيوان دى.
-*14)	...
-*15)	...
-*16)	....
+*12)	د دوی دا وینا چې (څښتن تعالى) ته د جزياتو په اړه مالومات نشته.
+*13)	 د هغوي دا وينا چې اسمان يوه خوځنده خپلواکې ارادې حيوان دى.
+*14)	غزالي د اسمان په اړه فلاسفه و دا وینا ناسمه بولي.
+*15)	د فلاسفه و دا خبره ناسمه ده، چې اسمان د ټولو جزیاتو عالم دی.
+*16)	فلاسفه دا په زبات نده رسولې، چې د عالم پنځوونکې (خالق) هم شته.
 *17)	د هغوي دا وينا چې خارق العادۀ ( د عادت خلاف كار) ناشونې دى.
 *18)	د هغوي د خپلې ددې وينا د كوم عقلي دليل په راوړلو كې پاتې راتلل، چې وايي نفس په خپل ځان قايم جوهر دى، نه جسم دى او نه جوهر دى.
 *19)	 د هغوي دا وينا چې د بشري نفس پنا كېدل ناشونې دى.
 *20)	 له بيا راژوندي كېدو، د اجساتو د حسر او د جنت و دوزخ جسماني خوندونو او ربړونو څخه د دوي انكار...
+
+
 كه چېرې څوك په ژور نظ سره ددې مباحثو مطالعه وكړي، نو دا خبره به ورته ښه روښانه شي، چې دا شل مسئلې د اسلامي ډلو ټپلو او نورو مذهبونو په ټولو طبعي او الهياتي علومو مشتمل دي، كه هغه لرغونې علوم دي يا اوسني، د يو څو مسئلو څخه پرته چې د هغې منل به د مفكرينو د ناپوهۍ سره برابر ه وي، لكه د ۱۴، ۱۵، او ۱۶مې مسئلې.
 
 ليك او ژباړه: '''عثمان منصور انصاري'''
