--- a/تهافت_الفلاسفه.mw
+++ b/تهافت_الفلاسفه.mw
@@ -68,7 +68,7 @@
 
 ==سرچينې==
 ** تاريخ فلاسفة الاسلام، ليكوال: ډاكټر محمد لطفي جمعة.
-
+** اسلام او فلسفه، لیکوال: ملک کریم بخش.
 
 [[category: فلسفه]]
 [[category: اسلامي فلسفه]]
