*Empty MediaWiki Message*

--- a/انسلم.mw
+++ b/انسلم.mw
@@ -50,13 +50,12 @@
 دې د څښتن د شتون لپاره د انتولوجیکي نقد، او د یو اسقف چې په خلاص مټ سره د صلیبيانو پر واړندې په ټینګه وردېد، له لامله ډېر زیات مشهور دی.
 
 
-
-an Italian medieval [[philosopher]], [[theology|theologian]], and church official who held the office of [[Archbishop of Canterbury]] from 1093 to 1109. Called the founder of [[scholasticism]], he is famous as the originator of the [[Anselm's argument|ontological argument]] for the existence of [[God]] and as the archbishop who openly opposed the [[Crusades]].
 __TOC__
 
-==Biography==
-===Early life=== 
-Anselm was born in the city of [[Aosta]] in the [[Kingdom of Burgundy]] (currently the capital of the [[Aosta Valley]] region in Northern Italy).  His family was noble and owned considerable property.  His father, Gundulph, was by birth a [[Lombards|Lombard]] and seems to have been harsh and violent.  Ermenberga, his mother, was regarded as prudent and virtuous.  She gave young Anselm careful religious instruction.
+=ژوندلیک==
+===لومړنې ژوند=== 
+انسلم د شمالي اېټالیا په [[برګونډي]] (د اوسني اوستا درې پلازمېنه) [[اوستا]] په نامه یوه ښار کې زېږېدلې دی. د انسلم کورنۍ یوه درنه او مړه کورنۍ وه، چې د ډېرو زمکو او جایدادونو څښتنه وه. دده پلار (ګندولف) له موره پیدا ... و، او له ورایه تریخ او عصبي ښکارېدو. اېرمېنبېرا (د هغه مور)یوه پرهېزګاره او محتاطه ښځه وه. هغې ماشوم انسلم ته په دېر احتایط سره دیني لارښوونې وکړې، او د عیسوي دین په بنسټونو یې ښه و روزه.
+
 
 At the age of fifteen, Anselm desired to enter a monastery but could not obtain his father's consent.  Disappointment brought on apparent [[psychosomatic illness]].  After recovery, he gave up his studies and lived a carefree life.  During this period, his mother died and his father's harshness became unbearable.
 
