--- a/انسلم.mw
+++ b/انسلم.mw
@@ -52,7 +52,7 @@
 
 __TOC__
 
-=ژوندلیک==
+==ژوندلیک==
 ===لومړنې ژوند=== 
 انسلم د شمالي اېټالیا په [[برګونډي]] (د اوسني اوستا درې پلازمېنه) [[اوستا]] په نامه یوه ښار کې زېږېدلې دی. د انسلم کورنۍ یوه درنه او مړه کورنۍ وه، چې د ډېرو زمکو او جایدادونو څښتنه وه. دده پلار (ګندولف) له موره پیدا ... و، او له ورایه تریخ او عصبي ښکارېدو. اېرمېنبېرا (د هغه مور)یوه پرهېزګاره او محتاطه ښځه وه. هغې ماشوم انسلم ته په دېر احتایط سره دیني لارښوونې وکړې، او د عیسوي دین په بنسټونو یې ښه و روزه.
 
@@ -72,7 +72,7 @@ The monastery grew in wealth and reputation and, after the [[Norman Conquest]], 
 
 Upon Lanfranc's death, however, [[William II of England|King William II]] seized the possessions and revenues of the [[Episcopal see|see]], and made no new appointment.  In 1092, at the invitation of [[Hugh d'Avranches, 1st Earl of Chester|Hugh, Earl of Chester]], Anselm crossed to England.  He was detained there by business for nearly four months and then refused permission to return to Bec by the king, who suddenly fell ill the following year.  Eager to make atonement for his failure to appoint a new archbishop, he nominated Anselm to the vacant see.  After a great struggle, the king compelled him to accept the pastoral staff of office.  After obtaining dispensation from his duties in Normandy, Anselm was consecrated as Archbishop of Canterbury in 1093.
 
-===Archbishop of Canterbury===
+===د کنتربري ستر مسیحي ملا===
 In exchange for retaining office, Anselm demanded certain conditions -- that King William return the possessions of the see, accept Anselm's spiritual counsel and acknowledge [[Urban II]] as pope, in opposition to [[Antipope Clement III]].  He only obtained partial consent to the first of these demands, and the last involved him in serious difficulty with the king.
 
 The Church's rule stated that metroplitans could not be consecrated without receiving the [[pallium]] from the hands of the pope. Anselm, accordingly, insisted that he must proceed to Rome to receive the pall, but King William would not permit it; he had not acknowledged Urban as pope and maintained his right to prevent a pope's acknowledgment by an English subject without his permission.
@@ -121,12 +121,12 @@ By 1107, the long dispute regarding investiture was finally settled with a compr
 
 Anselm is considered by many to be the first scholarly philosopher of Christian [[theology]].  His only great predecessor, [[Johannes Scotus Eriugena|Scotus Eriugena]], was more speculative and mystical in his writings than what is considered scholarly.  Anselm's writings represent a recognition of the relationship of reason to revealed truth, and an attempt to elaborate a rational system of faith.
 
-===Foundation===
+===بنسټ===
 Anselm sought to understand Christian consciousness through reason and develop intelligible truths interwoven with the Christian belief.  He believed that the necessary preliminary for this was possession of the Christian consciousness.  He wrote, "''Neque enim quaero intelligere ut credam, sed credo ut intelligam. Nam et hoc credo, quia, nisi credidero, non intelligam. ''"  ("Nor do I seek to understand that I may believe, but I believe that I may understand.  For this, too, I believe, that, unless I first believe, I shall not understand.")  According to Anselm, after faith is found, the attempt must be made to demonstrate by reason the truth of what is believed.
 
 The groundwork of Anselm's theory of knowledge is contained in the tract ''De Veritate'', where he affirms the existence of an [[absolute truth]] in which all other truth participates.  This absolute truth, he argues, is God, who is the ultimate ground or principle both of things and of thought.  The notion of God becomes the foreground of Anselm's theory, so it is necessary first to make God clear to reason and be demonstrated to have real existence.
 
-===Proofs===
+===پروفونه===
 Anselm wrote many [[proof|philosophical proofs]] within ''Monologion'' and ''[[Proslogion]]''.  In the first proof, Anselm relies on the ordinary grounds of realism, which coincide to some extent with the theory of [[Augustine of Canterbury|Augustine]]. He argues that "things" are called "good" in a variety of ways and degrees, which would be impossible were there not some absolute standard and some good in itself, in which all relative goods participate.  The same applies to adjectives like "great" and "just", whereby things involve a certain greatness and justice.  Anselm uses this thought process to state that the very existence of things is impossible without some one Being, by whom they come to exist.  This absolute Being, this goodness, justice and greatness, is God.  Anselm is not thoroughly satisfied with this reasoning, however, because it begins from [[a priori and a posteriori (philosophy)|''a posteriori'' grounds]], meaning that the reasoning is [[inductive reasoning|inductive]].  The philosophy also contains several converging lines of proof.
 
 Anselm desired to have one short demonstration, presented in ''Proslogion'', his famous proof of the existence of God.  It is referred to as the [[ontological argument]]—a term first applied by [[Immanuel Kant|Kant]] to the arguments of Seventeenth- and Eighteenth-Century rationalists.  Anselm defined his belief in the existence of God using the phrase "that than which nothing greater can be conceived".  He reasoned that, if "that than which nothing greater can be conceived" existed only in the intellect, it would not be "that than which nothing greater can be conceived", since it can be thought to exist in reality, which is greater.  It follows, according to Anselm, that "that than which nothing greater can be conceived" must exist in reality.  The bulk of the ''Proslogion'' is taken up with Anselm's attempt to establish the identity of "that than which nothing greater can be conceived" as God and thus to establish that God exists in reality.
