--- a/نجيب_عامر.mw
+++ b/نجيب_عامر.mw
@@ -1,5 +1,8 @@
 [[Image:NajibAmir.JPG|thumb|289px|نجيب عامر]]
 
+نجيب عامر په ١٩٧٩ کال کې د کندهار ولايت په سپين بولدک کې زېږېدلى ،اصلا د ننګرهار ولايت اوسيدونکى دى او دا مهال په پاکستان کې استوګنه لري .نوموړي د پاکستان د پېښور پوهنتون نه د ژورناليزم په څانګه کې د ماسترۍ تر کچې لوړې زدکړې کړي دي .د ٢٠٠٣م کال راهيسې د سيمې نه دازادۍ راډيو د پاره راپورونه چمتو کوي .درې شعري چاپ شوي ټولګې لري چې نومونه يې په دې توګه دي : ١ د چينارو لاندې منګيه ٢ د نرګسو غاړکۍ ٣ د نيمو شپو خبرې ...... عامرکله نا کله ژباړې هم کوي.( د پاچاهۍ آخري ورځ ) دهغه دژباړل شويوداستانونو ټولګه ده .
+
+همدا مخ له "http://ps.wikipedia.org/wiki/%DA%A9%D8%A7%D8%B1%D9%88%D9%86%DA%A9%DB%8C:Najibamir" څخه رااخيستل شوی
 
 
 
