*Empty MediaWiki Message*

--- a/هنري_کوربان.mw
+++ b/هنري_کوربان.mw
@@ -1,4 +1,6 @@
-هنري کوربان، نامتو ختیځ پوه، فیلسفو او په ایران کې د فرانسې انسټېټیوټ رییس، او په فرانسه کې د سوربن په پوهنتو کې ښوونکې په کال ۱۹۰۳ز زېږېدلې.
+[[انځور:Hanry_korban.jpg|left|thumb|230px| هنري کورباڼ]]
+
+'''هنري کوربان''' نامتو ختیځ پوه، فیلسفو او په ایران کې د فرانسې انسټېټیوټ رییس، او په فرانسه کې د سوربن په پوهنتو کې ښوونکې په کال ۱۹۰۳ز زېږېدلې.
 
 ده ۱۴ کاله په فرانس کې د فلسفې په زده کړه تېر کړل، په ځانګړي توګه د هېګل په فلسفه یې ښه پېژندله، او یو له هغو خلکو څخه و، [[هېدګر]] یې ښه ژور پېژانده، او د لودیځ له فلسفي ښوونځیو سره ښه اشنایي درلوده. 
 
