*Empty MediaWiki Message*

--- a/هنري_کوربان.mw
+++ b/هنري_کوربان.mw
@@ -5,3 +5,10 @@
 ده ۱۴ کاله په فرانس کې د فلسفې په زده کړه تېر کړل، په ځانګړي توګه د هېګل په فلسفه یې ښه پېژندله، او یو له هغو خلکو څخه و، [[هېدګر]] یې ښه ژور پېژانده، او د لودیځ له فلسفي ښوونځیو سره ښه اشنایي درلوده. 
 
 هنري کوربان د لودیځ له نامتو فلیسوفانو (ادموند موسرل، ارنست کاسیرر، امیل بریه، اتېن جېلسن، لویس ماسینیون) څخه یې علمي ګټې ترلاسه کړې.  ده به ځان د لویس ماسینیوس (تصوف پېژندونکي ختیځپوه)زده کوونکې ګاڼه، او هغه سره د زړه اړیکې لري. په حقیقت کې د همدې ښوونکې په وسیله له [[شهاب الدین سهروردي]] او د هغه له ښوونځي [[د اشراق ښوونځی]] سره بلد شو.
+
+
+[[category:فلسفه]]
+[[category:لودیځه فلسفه]]
+[[category:لودیځ فیلسوفان]]
+[[category:لودیځ ختیځپوهان]]
+[[category:ختیځ پوهان]]
