*Empty MediaWiki Message*

--- a/اپیکوري.mw
+++ b/اپیکوري.mw
@@ -1,6 +1,9 @@
 '''اپیکوري''': (Apicurean {E}) 
 د اپیکوري نسبت یوناني فیلسوف (اپیکور) ته کېږي. دا ټکې دده په لارویانو او یا هغه چا چې ددې (اپیکوري) لارې سره تړاو ولري.
 
-[http://www.tolafghan.com/falsafa د فلسفې ویبلاګ]
+
+== اخځلیک ==
+
+** [http://www.tolafghan.com/falsafa د فلسفې ویبلاګ]
 
 [[category:فلسفي وییپانګه]]
